# Full-Fledged_Blog

./: .replit  README.md  forms.py  main.py  pyproject.toml  requirements.txt
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.2.1-py3-none-any/pip-23.2.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-68.0.0-py3-none-any/setuptools-68.0.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.41.0-py3-none-any/wheel-0.41.0.dist-info/: RECORD
instance/: blog.db
templates/: contact.html  footer.html  header.html  index.html  post.html
